# text-adventure-engine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_AUDIT_REPORT - 1Dec25 - Partial.md  README - Text Adventure.md  README.md  WRExtn-TextAdventure.md  build-directory-structure.bat  create-docs-files.bat  create-engine-source-files.bat  create-root-level-files.bat  create-script-files.bat  create-story-files.bat  create-structure.bat  create-test-files.bat  create-tool-files.bat  story-file-format-spec.md
docs/: DEVELOPMENT.md  QUICK-START.MD  STATUS.txt  revised-file-structure.md
engine/: CMakeFiles.txt
engine/src/: main.c  main.h
engine/src/core/: commands.c  commands.h  constants.h  game.c  game.h  logger.c  logger.h  parser.c  parser.h  utils.c  utils.h
engine/src/gameplay/: combat.c  combat.h  dialog.c  dialog.h  puzzles.c  puzzles.h  quests.c  quests.h
engine/src/story/: ini_parser.c  ini_parser.h  loader.c  loader.h  manager.c  manager.h  scripts.c  story.h  validator.c  validator.h
engine/src/system/: platform.c  platform.h  save.c  save.h
engine/src/ui/: colors.c  colors.h  display.c  display.h  menu.c  menu.h  screen.c  splash.c  splash.h
engine/src/world/: inventory.c  items.c  items.h  npcs.c  npcs.h  rooms.c
stories/gravy-boat/: README.md
stories/test-story/: items.ini  npcs.ini  quests.ini  rooms.ini  story.ini
